# Attention-Vault

./: LICENSE  README.md
backend/: README.md  idl.json  main.py  pyproject.toml  pytest.ini
backend/app/api/routes/: contracts.py  router.py  twitter.py
backend/app/contract_client/: program_id.py
backend/app/contract_client/accounts/: __init__.py  payment_contract.py
backend/app/contract_client/errors/: custom.py
backend/app/contract_client/instructions/: __init__.py  close_contract.py  create_contract.py  distribute_tranche.py
backend/app/core/: config.py
backend/app/schemas/: twitter.py
backend/app/services/: db_service.py  distribute_tranche_service.py  get_contract_data.py  llm_service.py  solana_service.py  twitter_service.py
backend/tests/: conftest.py
backend/tests/services/: test_db_service.py
frontend/: .gitignore  README.md  package-lock.json  test.py
frontend/anchor/: Anchor.toml
frontend/anchor/programs/frontend/src/: lib.rs
frontend/anchor/src/: frontend-exports.ts  index.ts
frontend/anchor/tests/: frontend.spec.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/frontend/: page.tsx
frontend/src/app/influencer/: page.tsx
frontend/src/components/cluster/: cluster-data-access.tsx  cluster-ui.tsx
frontend/src/components/dashboard/: dashboard-feature.tsx
frontend/src/components/frontend/: frontend-data-access.tsx  frontend-feature.tsx  frontend-ui.tsx
frontend/src/components/influencer/: influencer-ui.tsx
frontend/src/components/ui/: ui-layout.tsx
