[project]
name = "backend"
version = "0.1.0"
description = "Backend API for Attention Vault to verify social media metrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn>=0.23.2",
    "tweepy>=4.14.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.3.0",
    "httpx>=0.24.1",
    "loguru>=0.7.3",
    "motor>=3.7.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
