[project]
name = "backend"
version = "0.1.0"
description = "Backend API for Attention Vault to verify social media metrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn>=0.23.2",
    "tweepy>=4.14.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.3.0",
    "httpx>=0.24.1",
    "loguru>=0.7.3",
    "motor>=3.7.0",
    "pytest-asyncio>=0.21.0",
    "base58>=2.1.1",
    "solders>=0.21.0",
    "solana>=0.18.1",
    "anchorpy[cli,pytest]>=0.20.1",
]

[project.optional-dependencies]
dev = [
    "isort>=5.12.0",
    "pytest>=7.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
